--- a/add.html
+++ b/add.html
@@ -10,7 +10,9 @@
     <div id="card">
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQouEx3Qe1nFAb7N_p6cSf8I6PtBC6KewXFaA&usqp=CAU"
-        alt=""
+        alt=""# Example usage:
+
+
       />
       <h1>samantha</h1>
       <h2>stranger</h2>
